mfiutil: Handle potential ioctl(2) failures in mfi_flash.c

The return value of function 'mfi_dcmd_command' should always be checked for
the potential ioctl(2) failure.

PR: 281158